[gd_scene load_steps=4 format=3 uid="uid://cqjvlifp8vo83"]

[ext_resource type="Script" path="res://assets/effects/speech_bubble.gd" id="1_0ibe8"]
[ext_resource type="FontFile" uid="uid://lhnm3prxqp6c" path="res://assets/fonts/VT323-Regular.ttf" id="2_ap8j7"]
[ext_resource type="Texture2D" uid="uid://blw3w4uutsgpp" path="res://assets/triangle.png" id="3_rdtuc"]

[node name="SpeechBubble" type="Node2D"]
z_index = 10
script = ExtResource("1_0ibe8")
message = "some text
message"
size = Vector2(100, 40)

[node name="ui_root" type="Control" parent="."]
unique_name_in_owner = true
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_left = -56.5
offset_top = -98.6
offset_right = -16.5
offset_bottom = -58.6

[node name="outer_container" type="MarginContainer" parent="ui_root"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 113.0
offset_bottom = 73.0

[node name="inner_container" type="MarginContainer" parent="ui_root/outer_container"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="label" type="Label" parent="ui_root/outer_container/inner_container"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ap8j7")
theme_override_font_sizes/font_size = 28
text = "some text
message"

[node name="ColorRect" type="ColorRect" parent="ui_root/outer_container"]
show_behind_parent = true
layout_mode = 2

[node name="tail" type="TextureRect" parent="ui_root"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.9
offset_top = 73.0
offset_right = 286.9
offset_bottom = 201.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_rdtuc")
